src/style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.icon-container {
  display: inline-block;
  width: 25px;
  height: 25px;
}

img {
  width: 100%;
  max-width: 100%;
  height: 100%;
  max-height: 100%;
}

html,
body {
  width: 100%;
  height: 100%;
}

html {
  box-sizing: inherit;
  font-size: 10px;
}

body {
  font-size: 1.6rem;
  background-color: #eeeeee;
  font-family: Arial, Helvetica, sans-serif;
}

#container {
  display: grid;
  grid-template-columns: 250px 1fr;
  grid-template-rows: 80px 1fr;
  height: 100%;
}

.main-header {
  grid-column: 1 / -1;
  background-color: #c38d9e;
  color: white;
  display: flex;
  align-items: center;
  justify-content: start;
  padding: 0 24px;
}

header .logo {
  font-size: 4.5rem;
  letter-spacing: 1.85px;
  display: flex;
  gap: 1.2rem;
}

nav {
  grid-row: 2 / -1;
  background-color: #ffffff;
}

nav > div {
  margin: 6px 0;
}

nav h1 {
  color: rgba(0, 0, 0, 0.459);
  font-size: 1.56rem;
  margin: 6px;
  letter-spacing: 0.12rem;
}

nav button {
  outline: none;
  border: none;
  cursor: pointer;
  background-color: transparent;
  padding: 10px 20px;
  width: 100%;
  transition: all 0.07s;
}

nav .filters {
  margin: 6px 12px;
}

nav .filters button {
  display: flex;
  align-items: center;
  gap: 14px;
}

nav .filters button:hover {
  transform: translateX(15px);
  background-color: rgba(238, 238, 238, 0.549);
}

nav .filters button:active {
  background-color: #eeeeee;
}

nav .filters button.active {
  transform: translateX(15px);
  background-color: #eeeeee;
  border-left: 3px solid black;
  padding-left: 17px;
}
nav .hr {
  display: inline-block;
  height: 2.459px;
  background-color: #eeeeee;
  width: 100%;
  margin: 20px 0 14px 0;
}

nav .lists {
  position: relative;
  margin: 6px 12px;
  max-height: 230px;
  display: flex;
  flex-flow: column nowrap;
  gap: 8px;
}

nav .list-items {
  max-height: 195px;
  overflow-y: scroll;
  overflow-x: hidden;
  list-style-type: none;
}

nav .list-item {
  padding: 12px;
  cursor: pointer;
}

nav .lists button,
.list-item {
  display: flex;
}

nav .lists .list-item:hover {
  background-color: rgba(237, 237, 237, 0.4);
}

nav .lists .list-item:active {
  background-color: rgba(238, 238, 238, 0.549);
}

nav .lists button.active {
  background-color: #eeeeee;
  border-left: 3px solid black;
  padding-left: 17px;
}

nav .lists .list-item {
  height: 40px;
  font-size: 1.75rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 210px;
  align-items: center;
  display: flex;
  gap: 12px;
}

nav .lists .list-item.active {
  border-left: 3px inset black;
  background-color: #eeeeee;
}

nav .lists .list-icon {
  flex-shrink: 0;
}

nav .lists .text {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

nav .lists .create-list-item {
  font-size: 1.35rem;
  background-color: #c38d9e;
  color: white;
  font-weight: bolder;
  letter-spacing: 0.1rem;
  align-items: center;
  justify-content: center;
  border-width: 2px;
  border-style: solid;
}

nav .lists .create-list-item:hover {
  opacity: 0.85;
}

nav .lists .create-list-item:active {
  background-color: #ffffff;
  border-color: #c38d9e;
  color: #c38d9e;
}

.current-screen,
.empty-screen {
  grid-column: 2 / -1;
  grid-row: 2 / -1;
  margin: 20px;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 9px;
  position: relative;
}

.current-screen .list-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 12px;
  margin: 4px;
}

.current-screen .current-screen-title {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 250px;
}

.current-screen .options {
  display: flex;
  gap: 24px;
  padding: 8px;
}

.current-screen .options button {
  outline: none;
  border: 1.5px solid white;
  padding: 8px 12px;
}

.current-screen .options button:active {
  background-color: #ccc;
}

.current-screen .todo-items {
  list-style-type: none;
  display: grid;
  gap: 10px;
  max-height: 380px;
  overflow-y: auto;
}

.todo-item {
  display: flex;
  background-color: #eee;
  height: 60px;
  border-radius: 9px 0px 0px 9px;
  border-right-style: inset;
  border-right-width: 6px;
}

.todo-item[data-priority="high"] {
  border-right-color: rgb(255, 0, 0);
}
.todo-item[data-priority="medium"] {
  border-right-color: rgb(223, 223, 11);
}
.todo-item[data-priority="low"] {
  border-right-color: rgb(89, 84, 84);
}

.todo-item[data-priority="none"] {
  border-right: none;
  border-radius: 9px;
}

.todo-item .marker-label-container {
  position: relative;
  width: 50px;
}

.todo-item .marker-container {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  cursor: pointer;
  font-size: 22px;
  user-select: none;
  width: 25px;
  height: 25px;
}

.todo-item .marker-container input[type="checkbox"] {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

.todo-item .marker {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 25px;
  width: 25px;
  border-radius: 50%;
  background-color: #ffffff;
}

.todo-item .marker-container:hover input ~ .marker {
  background-color: #ccc;
}

.todo-item .marker-container input:checked ~ .marker {
  background-color: green;
}

.todo-item .marker-container .marker::after {
  content: "";
  position: absolute;
  display: none;
}

.todo-item .marker-container input:checked ~ .marker::after {
  display: block;
}

.todo-item .marker-container .marker::after {
  left: 9px;
  top: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.todo-item [data-done="false"] {
}

.todo-item [data-done="true"] {
}

.todo-item .todo-details-overview {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 8px;
  padding-left: 8px;
  user-select: none;
  cursor: pointer;
}

.todo-item .todo-details-overview:hover {
  background-color: rgba(182, 175, 175, 0.567);
}

.todo-item .todo-title {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 300px;
  width: 300px;
}

.todo-item .date-subtask-view {
  font-size: 0.8em;
  display: flex;
  align-items: center;
  gap: 8px;
}

.todo-item > button {
  padding: 9px 12px;
  cursor: pointer;
  align-self: center;
  margin: 8px;
}

.todo-item .delete-todo {
}

.todo-item .edit-todo {
}

.todo-item .priority {
  width: 12px;
  background-color: red;
  border-top-right-radius: 9px;
  border-bottom-right-radius: 9px;
}

.todo-item .priority[data-priority="high"] {
}

.current-screen .add-task {
  position: absolute;
  bottom: 30px;
  right: 30px;
  height: 60px;
  width: 60px;
  border-radius: 50%;
  border: 2px solid #C38D9E;
  background-color: #C38D9E;
  color: white;
  padding: 8px;
  font-weight: bold;
}

.current-screen .add-task:hover {
  background-color: rgba(195, 141, 158, 0.567);
  border-color: rgba(195, 141, 158, 0.567);
}

.current-screen .add-task:active {
  color: #C38D9E;
  background-color: white;
}

dialog {
  margin: auto;
  border: 2px inset;
}

dialog.list-delete-confirm,
dialog.todo-delete-confirm {
  width: 300px;
}

.list-delete-confirm .dialog-content,
.create-list-item-dialog form,
.todo-delete-confirm .dialog-content,
.rename-list-item-dialog form,
.todo-details .dialog-content {
  display: flex;
  gap: 12px;
  flex-flow: column nowrap;
  padding: 8px 12px;
  width: 100%;
}

.list-delete-confirm h1,
.create-list-item-dialog h1,
.todo-delete-confirm h1,
.rename-list-item-dialog h1 {
  border-bottom: 1.8px solid gray;
  font-size: 2.2rem;
  padding: 8px 0;
}

.list-delete-confirm p {
}

.list-delete-confirm .btn-group,
.create-list-item-dialog .btn-group,
.todo-delete-confirm .btn-group,
.rename-list-item-dialog .btn-group,
.todo-details .btn-group {
  display: flex;
  justify-content: flex-end;
  gap: 12px;
}

.list-delete-confirm button,
.create-list-item-dialog button,
.todo-delete-confirm button,
.rename-list-item-dialog button,
.todo-details button {
  border: 1px solid gray;
  padding: 8px 12px;
}

.create-list-item-dialog,
.rename-list-item-dialog {
  width: 350px;
  height: 200px;
}

.create-list-item-dialog form,
.rename-list-item-dialog form {
  width: 100%;
  display: flex;
  height: 100%;
}

.create-list-item-dialog h1,
.rename-list-item-dialog h1 {
  font-size: 2.2rem;
  border-bottom: 1.2px solid gray;
}

.create-list-item-dialog input,
.rename-list-item-dialog input {
  margin: auto 0px;
  height: 35px;
  border: none;
  border-bottom: 2px solid;
  padding-left: 10px;
  outline: none;
  font-weight: bold;
  font-size: 1.9rem;
}

.create-todo-item {
}
.create-todo-item form {
  padding: 8px 12px;
  display: flex;
  flex-direction: column;
  gap: 12px;
  width: 350px;
}

.create-todo-item .row {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.create-todo-item .row-title {
  font-size: 1.9rem;
}

.create-todo-item input {
}

.create-todo-item input[type="text"] {
  height: 25px;
  padding: 6px;
}

.create-todo-item select {
  height: 25px;
}

.create-todo-item textarea {
  resize: none;
  padding: 6px;
  height: 100px;
}

.create-todo-item .btn-group {
  display: flex;
  justify-content: flex-end;
  gap: 12px;
}

.create-todo-item .btn-group button {
  padding: 8px 12px;
  border: 1px solid gray;
}

.todo-details .dialog-content {
  max-height: 450px;
  overflow-y: auto;
  width: 500px;
  padding: 12px 18px;
}

.todo-details .dialog-content p {
  display: flex;
}

.todo-details .value {
}

.todo-details .heading {
  font-weight: bold;
  text-transform: uppercase;
  flex-basis: 95px;
  flex-shrink: 0;
}

.hidden {
  display: none;
}

.separator {
  display: inline-block;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background-color: black;
}

